# tayyabyamin

./: error.py  hello.md
app/: hello.md
app/login/: login.py
hello world jupitor/: Dockerfile  hello_world.ipynb
jupitor-big-problem/: Dockerfile  new.py
signup/: signup.py
uv_learning/cursor/: Calculator.py  README.md  app.py  pyproject.toml
uv_learning/lg/: pyproject.toml
uv_learning/lg/src/lg/: __init__.py
uv_learning/pr7/: pyproject.toml
uv_learning/pr7/src/pr7/: main.py  main1.py
uv_learning/pr8/: pyproject.toml
uv_learning/pr8/src/pr8/: __init__.py
uv_learning/project1/: poem.txt  pyproject.toml
uv_learning/project1/src/project1/: main.py
word spelling test/: correct_spellings.txt  gui_test.py  spelling_test.py  words.docx  ~$words.docx
word spelling test/full application testing phase/: Spelling Test.spec  correct_spellings.txt  gui_test.py  words.docx
word spelling test/installation file spelling test/: README.txt  words.docx
