[project]
name = "cursor"
version = "0.1.0"
description = "A Python package for cursor-related functionality"
readme = "README.md"
authors = [
    { name = "tayyabyamin", email = "tayyabyamin@gmail.com" }
]
requires-python = ">=3.11.11"
dependencies = [
    "uv>=0.1.0",
]

[project.scripts]
cursor = "cursor.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 