[project]
name = "lg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tayyabyamin", email = "tayyabyamin@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langchain-google-genai>=2.1.1",
    "langgraph>=0.3.19",
    "python-dotenv>=1.0.1",
]

[project.scripts]
lg = "lg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
