[project]
name = "pr7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tayyabyamin", email = "tayyabyamin@gmail.com" }
]
requires-python = ">=3.13.2"
dependencies = [
    "crewai>=0.105.0",
    "litellm>=1.60.2",
]

[project.scripts]
pr7 = "pr7:main"
simpleflow = "pr7.main:kickoff"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
